<resources>
    <string name="app_name">SabbarTask</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="some_thing_went_wrong_error_msg">Something went wrong, Please try again</string>
    <string name="please_click_to_retry">Tap to retry</string>
    <string name="error_unknown">Unknown Error!</string>
    <string name="no_result_found">No results found.</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="try_again">Try again</string>
    <string name="loading">Loading.....</string>
    <string name="unexpected_error">Unexpected</string>
    <string name="choose_user">Select your identity</string>
    <string name="user">User</string>
    <string name="driver">Driver</string>

    <string name="location_dialog_title">Location Service Disabled or not opened all the time!</string>
    <string name="location_dialog_msg">Please enable location services all the time.</string>
    <string name="location_dialog_button">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="add_pickup_dropoff">Add Pick-up/Drop-off Locations</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="dropoff_location">Drop-off Location</string>
    <string name="data_required">Required Data!</string>

    <string name="geofence_entered">Geofence entered</string>


    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="location_required_error">Location services must be enabled for this game.</string>

    <string name="geofences_not_removed">Geofences not removed.</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="geofence_error">There was an error in finding your treasure</string>

    <!-- Notification Strings-->
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>

    <!-- Content Description Strings -->
    <string name="android_map_description">An Android robot with a map</string>
    <string name="content_text">Your driver is</string>
    <string name="geofences_removed">Geofence removed!</string>
    <string name="permission_location_rationale">Location permission</string>


</resources>