<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/yellow"
    tools:context=".ui.main.MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".30" />

    <TextView
        android:id="@+id/tv_title"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_user"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/guideline1"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_driver"
        android:background="@drawable/white"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/driver"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_user"
        android:background="@drawable/white"
        app:layout_constraintTop_toBottomOf="@id/btn_driver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"/>

</androidx.constraintlayout.widget.ConstraintLayout>