<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_pickup"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pickup_location"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="20dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="numberDecimal"
        android:id="@+id/et_pickup_lat"
        android:hint="@string/latitude"
        android:padding="8dp"
        android:textColor="@color/quantum_grey"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pickup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_pickup_lng"
        android:layout_margin="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grey"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="numberDecimal"
        android:id="@+id/et_pickup_lng"
        android:padding="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:textColor="@color/quantum_grey"
        app:layout_constraintStart_toEndOf="@id/et_pickup_lat"
        app:layout_constraintTop_toTopOf="@id/et_pickup_lat"
        app:layout_constraintBottom_toBottomOf="@id/et_pickup_lat"
        android:hint="@string/longitude"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grey"/>



    <TextView
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_pickup_lat"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_dropoff"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dropoff_location"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="20dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="numberDecimal"
        android:id="@+id/et_dropoff_lat"
        android:hint="@string/latitude"
        android:padding="8dp"
        android:textColor="@color/quantum_grey"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_dropoff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_dropoff_lng"
        android:layout_margin="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grey"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="numberDecimal"
        android:id="@+id/et_dropoff_lng"
        android:padding="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:textColor="@color/quantum_grey"
        app:layout_constraintStart_toEndOf="@id/et_dropoff_lat"
        app:layout_constraintTop_toTopOf="@id/et_dropoff_lat"
        app:layout_constraintBottom_toBottomOf="@id/et_dropoff_lat"
        android:hint="@string/longitude"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grey"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_pickup_dropoff"
        app:layout_constraintTop_toBottomOf="@id/et_dropoff_lng"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_pickup_dropoff"/>


</androidx.constraintlayout.widget.ConstraintLayout>